<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewListingActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#D2E2E0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002">

        <ImageView
            android:id="@+id/listing_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-1dp"
            android:contentDescription="@string/listing_image_desc"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <TextView
        android:id="@+id/housing_type"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/housing_type"
        android:fontFamily="sans-serif"
        android:text="@string/housing_type"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/pet_friendly"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/pet_friendly"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:text="@string/pet_friendly"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/listing_name"
        android:layout_width="304dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/listing_name_desc"
        android:fontFamily="sans-serif"
        android:text="@string/listing_name"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.136" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="355dp"
        android:layout_height="201dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listing_name"
        app:layout_constraintVertical_bias="0.18">

        <TextView
            android:id="@+id/listing_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/listings_desc"
            android:fontFamily="sans-serif"
            android:text="@string/listings_desc"
            android:textAlignment="viewStart"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/listing_date"
        android:layout_width="171dp"
        android:layout_height="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/listingDate"
        android:fontFamily="sans-serif"
        android:text="@string/listingDate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/move_in_date"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/move_in_date"
        android:layout_width="171dp"
        android:layout_height="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/move_in_date"
        android:fontFamily="sans-serif"
        android:text="@string/move_in_date"
        android:textSize="18sp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.954" />

</androidx.constraintlayout.widget.ConstraintLayout>