<?xml version="1.0" encoding="utf-8"?>
<!--XMl Layout for RecyclerView-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idListingsRV"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_marginTop="24dp"
        android:translationY="-35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listings_header"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/listings_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listings_toggle"
        android:translationY="5dp"
        app:layout_constraintBottom_toTopOf="@+id/listings_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toEndOf="@+id/createListingButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <TextView
        android:id="@+id/listings_header"
        android:layout_width="300dp"
        android:layout_height="33dp"
        android:text="@string/listings_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:translationX="10dp"
        android:translationY="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/listings_toggle"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/createListingButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:text="@string/add_listing_button_text"
        android:textAlignment="center"
        android:translationY="10dp"
        app:layout_constraintBottom_toTopOf="@+id/listings_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />


</androidx.constraintlayout.widget.ConstraintLayout>


<!-- Dynamic Text List -->

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="2dp"
        android:divider="@color/black"
        android:id="@+id/dynamic_listings">
    </ListView>
</LinearLayout>-->