<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#D2E2E0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="180dp"
            android:contentDescription="@string/profile_image_desc"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="150dp"
            android:contentDescription="@string/profile_name_desc"
            android:fontFamily="sans-serif"
            android:text="@string/profile_name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="150dp"
            android:contentDescription="@string/profile_email"
            android:fontFamily="sans-serif"
            android:text="@string/profile_email"
            android:textAlignment="center"
            android:textSize="14sp"
            android:translationY="16dp" />

        <TextView
            android:id="@+id/profile_birthday"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-129dp"
            android:layout_marginBottom="150dp"
            android:contentDescription="@string/profile_birthday"
            android:fontFamily="sans-serif"
            android:text="@string/profile_birthday"
            android:textAlignment="center"
            android:textSize="14dp"
            android:translationY="147dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card_view"
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:translationY="-5dp"
            app:cardBackgroundColor="#D2E2E0">

            <TextView
                android:id="@+id/profile_blurb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_blurb_desc"
                android:fontFamily="sans-serif"
                android:text="@string/profile_blurb_text"
                android:textAlignment="viewStart"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/edit_desc_button"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="282dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#D2E2E0"
            android:scaleX="1.75"
            android:scaleY="1.75"
            android:textColor="#D2E2E0"
            app:icon="@drawable/ic_edit"
            app:iconTint="#F44336" />

    </RelativeLayout>

    <TextView
        android:id="@+id/preferences_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/preferences_minPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences_title"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/preferences_maxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        android:translationY="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences_minPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preferences_housingType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        android:translationY="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences_minPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preferences_roommateCount4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        android:translationY="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences_minPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preferences_petFriendly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        android:translationY="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/preferences_noise"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences_minPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preferences_leaseLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        android:translationY="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences_minPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preferences_smoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/preferences_minPrice"
        app:layout_constraintTop_toBottomOf="@+id/preferences_title"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/preferences_partying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/preferences_maxPrice"
        app:layout_constraintTop_toBottomOf="@+id/preferences_smoking"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/preferences_drinking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/preferences_housingType"
        app:layout_constraintTop_toBottomOf="@+id/preferences_smoking"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/preferences_noise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/preferences_roommateCount4"
        app:layout_constraintTop_toBottomOf="@+id/preferences_smoking"
        app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/preferences_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_title"
        android:text="@string/preferences_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/preferences_petFriendly"
        app:layout_constraintTop_toBottomOf="@+id/preferences_smoking"
        app:layout_constraintVertical_bias="0.498" />

</androidx.constraintlayout.widget.ConstraintLayout>